--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@font-face {
+  font-family: 'vt323';
+  src: url('./VT323-Regular.ttf') format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'VT323', monospace;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: 'vt323', monospace;
 }
 
 /*  Navbar starts */
@@ -128,7 +108,7 @@
   width: calc(100% - 700px);
   text-align: center;
   top: 60%;
-  margin-top: 10px;
+  margin-top: 20px;
   left: 50%;
   transform: translate(-50%, -50%);
   border-bottom: 1px solid #03a062;
@@ -159,7 +139,7 @@
   width: calc(100% - 800px);
   text-align: center;
   top: 70%;
-  margin-top: 60px;
+  margin-top: 75px;
   left: 50%;
   transform: translate(-50%, -50%);
   border-bottom: 1px solid #03a062;
@@ -212,12 +192,5 @@
 /* Index ends */
 
 /* Home starts */
-
-.home {
-  height: 100vh;
-  background-color: #000;
-  background-image: url('./components/layout/background.png');
-  background-size: cover;
-}
 
 /* Home ends */
