--- a/src/App.css
+++ b/src/App.css
@@ -218,15 +218,37 @@
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.about .about-wrapper .about-right .intro a {
+  border-bottom: 3px solid rgb(0, 0, 0);
+  transition: ease-in-out 0.7s;
+}
+.about .about-wrapper .about-right .intro a:hover {
+  border-bottom: 3px solid rgb(255, 255, 255);
+}
 
 .about .about-wrapper .about-right .skills {
   margin-top: 25px;
   border-bottom: 1px solid rgba(207, 207, 207, 0.5);
 }
 .about .about-wrapper .about-right .skills span {
-  color: rgb(255, 255, 255);
   font-size: 45px;
   border-bottom: 1px solid rgba(207, 207, 207, 0.5);
+}
+.about .about-wrapper .about-right .skills span button {
+  color: rgb(255, 255, 255);
+  background-color: #191919;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: ease-in-out 0.7s;
+  font-size: 45px;
+  border-bottom: 3px solid rgb(0, 0, 0);
+}
+.about .about-wrapper .about-right .skills span button:hover {
+  border-bottom: 3px solid rgb(255, 255, 255);
+}
+.about .about-wrapper .about-right .skills span button.active {
+  border-bottom: 3px solid rgb(255, 255, 255);
 }
 .about .about-wrapper .about-right .skills ul {
   display: flex;
