--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
   border-radius: 5px;
   padding: 15px 20px;
   letter-spacing: 3px;
+  font-size: 20px;
   color: white;
   transition: ease-in-out 0.5s;
   border: 1px solid rgba(207, 207, 207, 0);
@@ -211,7 +212,7 @@
   background-position: bottom;
 }
 .about .about-wrapper .about-left {
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .about .about-wrapper .about-right {
   font-family: Arial, Helvetica, sans-serif;
@@ -289,74 +290,6 @@
 
 /* Portfolio starts */
 
-.portfolio {
-  background: #191919;
-  height: 100vh;
-  position: relative;
-}
-.portfolio-wrapper {
-  position: relative;
-  top: 15%;
-  width: calc(100% - 400px);
-  margin-left: 200px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 20px;
-  padding: 0 5%;
-}
-.portfolio-wrapper .card {
-  border: 1px solid white;
-  border-radius: 10px;
-  background-color: #e3e3e3;
-  position: relative;
-  height: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 0;
-}
-.portfolio-wrapper .card .card-title {
-  text-align: center;
-  color: #191919;
-  padding: 10px;
-  margin-top: 40px;
-}
-.portfolio-wrapper .card .card-title a {
-  color: #191919;
-  border: none;
-  text-decoration: none;
-  font-size: 24px;
-}
-
-.portfolio-wrapper .card .card-box {
-  text-align: center;
-  padding: 10px;
-}
-.portfolio-wrapper .card .card-links {
-  padding: 10px;
-  width: 100%;
-  margin-bottom: 40px;
-  display: flex;
-  justify-content: space-around;
-}
-.portfolio-wrapper .card .card-links a {
-  color: #191919;
-  text-decoration: none;
-  font-style: italic;
-  font-size: 18px;
-  border: 1px solid black;
-  width: 20%;
-  text-align: center;
-  padding: 2% 2%;
-  border-radius: 10px;
-  transition: 0.5s ease-in-out;
-}
-.portfolio-wrapper .card .card-links a:hover {
-  background-color: #191919;
-  color: #fff;
-}
 /* Portfolio ends */
 
 /* Contact starts */
@@ -393,6 +326,7 @@
 .contact .contact-wrapper .contact-form {
   margin-top: 10px;
   height: 80%;
+  margin: auto 0;
 }
 .contact .contact-wrapper .contact-form form {
   height: 100%;
@@ -400,8 +334,8 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  width: calc(100% - 100px);
-  margin-left: 50px;
+  width: 80%;
+  margin: 0 auto;
   position: relative;
   top: 7%;
 }
