--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   padding: 15px 20px;
   letter-spacing: 3px;
   font-size: 20px;
+  font-weight: 500;
   color: white;
   transition: ease-in-out 0.5s;
   border: 1px solid rgba(207, 207, 207, 0);
@@ -56,7 +57,7 @@
   border: 1px solid rgb(207, 207, 207);
 }
 .navbar .links ul li a.active {
-  border: 1px solid rgb(207, 207, 207);
+  border: 2px solid rgb(207, 207, 207);
 }
 #btnMenu {
   position: absolute;
@@ -373,8 +374,9 @@
 
 /* MEDIA QUERIES */
 
+/* mobile starts */
 /* For 640 Resolution */
-@media only screen and (min-device-width: 360px) and (max-device-width: 680px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 680px) {
   /* NAVBAR STARTS */
 
   .navbar {
@@ -386,7 +388,7 @@
   }
   .navbar .links {
     height: 100vh;
-    width: 40%;
+    width: 100%;
   }
   .navbar .links ul {
     width: 100%;
@@ -437,7 +439,7 @@
     justify-content: space-around;
     width: 95%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.95);
   }
   .welcomer .welcomer-wrapper .top {
     padding-top: 10px;
@@ -468,8 +470,169 @@
   }
   /* INDEX ENDS */
 }
+
+/* mobile ends */
 @media (min-device-width: 741px) {
   #btnMenu {
     display: none;
   }
 }
+
+/* tablet starts */
+@media only screen and (min-device-width: 767px) and (max-device-width: 1023px) {
+  /* NAVBAR STARTS */
+  #btnMenu {
+    display: inline;
+  }
+  .navbar {
+    margin-top: 0;
+    position: absolute;
+    left: -100%;
+    transition: ease-in-out 0.7s;
+    z-index: 99;
+  }
+  .navbar .links {
+    height: 100vh;
+    width: 100%;
+  }
+  .navbar .links ul {
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0.95);
+    left: 0%;
+    height: 100vh;
+  }
+  .navbar .links i {
+    display: inline;
+    margin: 0 auto;
+    position: relative;
+    top: 5%;
+    color: #fff;
+    font-size: 44px;
+    z-index: 99;
+  }
+  .navbar .links ul li {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+    margin-top: 25px;
+  }
+  .navbar.active {
+    left: 0;
+  }
+  #btnMenu {
+    z-index: 99;
+  }
+  #btnMenu i {
+    font-size: 34px;
+  }
+
+  /* NAVBAR ENDS */
+
+  /* INDEX STARTS */
+  .welcomer {
+    background-size: cover;
+    background-position: bottom;
+  }
+  .welcomer .welcomer-wrapper {
+    width: 80%;
+    height: 90vh;
+  }
+  .welcomer .welcomer-wrapper .top {
+    padding-top: 2%;
+  }
+  .welcomer .welcomer-wrapper .top span {
+    font-size: 36px;
+    margin-bottom: 18px;
+  }
+
+  .welcomer .welcomer-wrapper .mid span {
+    font-size: 30px;
+  }
+
+  /* INDEX ENDS */
+}
+/* tablet ends */
+
+/* laptop starts */
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1370px) {
+  .navbar {
+    margin-top: 10px;
+    position: fixed;
+  }
+  .navbar .links {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .navbar .links ul {
+    width: 100%;
+    height: 50px;
+    margin: 0 auto;
+  }
+  .navbar .links ul li {
+    margin: 0 auto;
+  }
+  .navbar .links ul li a {
+    font-size: 24px;
+  }
+
+  .welcomer {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: bottom;
+  }
+  .welcomer .welcomer-wrapper {
+    width: 80%;
+    height: 85vh;
+    top: 55%;
+  }
+  .welcomer .welcomer-wrapper .top img {
+    width: 30%;
+  }
+  .welcomer .welcomer-wrapper .top span {
+    font-size: 44px;
+    margin-bottom: 10px;
+  }
+  .welcomer .welcomer-wrapper .mid span {
+    font-size: 34px;
+  }
+  .welcomer .welcomer-wrapper .mid ul li {
+    font-size: 24px;
+  }
+}
+
+/* laptop ends */
+
+/* desktop starts */
+@media only screen and (min-device-width: 1371px) and (max-device-width: 2400px) {
+  .navbar .links ul {
+    width: 75%;
+  }
+  .navbar .links ul li {
+    margin: 0 auto;
+  }
+  .navbar .links ul li a {
+    font-size: 25px;
+  }
+
+  .welcomer .welcomer-wrapper {
+    top: 55%;
+    width: 80%;
+  }
+  .welcomer .welcomer-wrapper .top img {
+    width: 25%;
+    padding-top: 5px;
+  }
+
+  .welcomer .welcomer-wrapper .mid span {
+    font-size: 36px;
+  }
+}
+/* desktop ends */
