--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,30 @@
   align-items: center;
   border: 1px solid white;
 }
+.inter2 .inter2-wrapper .top {
+  width: 100%;
+}
+.inter2 .inter2-wrapper .top span {
+  color: #fff;
+  font-size: 84px;
+}
+.inter2 .inter2-wrapper .bottom {
+  width: 70%;
+}
+.inter2 .inter2-wrapper .bottom ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 64px;
+}
+.inter2 .inter2-wrapper .bottom ul li a {
+  color: rgba(237, 237, 237, 0.5);
+  border-bottom: 0px solid rgba(237, 237, 237, 0.5);
+  transition: ease-in-out 0.5s;
+}
+.inter2 .inter2-wrapper .bottom ul li a:hover {
+  color: #fff;
+}
 /* Inter divler */
 
 /* Home starts */
@@ -222,7 +246,84 @@
 /* About Ends */
 
 /* Portfolio starts */
-
+.portfolio {
+  max-width: 100%;
+  height: 130vh;
+}
+.portfolio .portfolio-wrapper {
+  max-width: 90%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.portfolio .portfolio-wrapper .repos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  padding-top: 70px;
+}
+.portfolio .portfolio-wrapper .repos .card {
+  background-color: #e3e3e3;
+  border-radius: 10px;
+  font-family: 'Poppins', sans-serif;
+  padding: 10px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  transition: ease-in-out 0.5s;
+}
+.portfolio .portfolio-wrapper .repos .card:hover {
+  box-shadow: 1px 3px 1px 2px rgba(0, 0, 0, 0.5);
+  transform: translateY(-1%);
+}
+.portfolio .portfolio-wrapper .repos .card .card-title {
+  font-size: 44px;
+  color: #191919;
+  margin: 15px 0;
+  font-family: 'Poppins', sans-serif;
+}
+.portfolio .portfolio-wrapper .repos .card .card-img {
+  width: 100%;
+}
+.portfolio .portfolio-wrapper .repos .card .card-img img {
+  width: 100%;
+  height: 25vh;
+  margin: 0 auto;
+}
+.portfolio .portfolio-wrapper .repos .card .card-desc {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin: 20px 0;
+  color: #191919;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  line-height: 35px;
+}
+.portfolio .portfolio-wrapper .repos .card .card-desc p {
+  font-family: 'Poppins', sans-serif;
+}
+.portfolio .portfolio-wrapper .repos .card .card-links {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.portfolio .portfolio-wrapper .repos .card .card-links a {
+  font-family: 'Poppins', sans-serif;
+  outline: none;
+  font-style: italic;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.3);
+  font-size: 25px;
+  border: none;
+  text-decoration: none;
+  padding: 7px 15px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #2b2b2b;
+  transition: ease-in-out 0.5s;
+}
+.portfolio .portfolio-wrapper .repos .card .card-links a:hover {
+  background-color: #191919;
+}
 /* Portfolio ends */
 
 /* Contact starts */
